src/achtix-homelab/longhorn/longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system # ต้องอยู่ใน namespace เดียวกับ service
spec:
  parentRefs:
  - name: shop-gateway
    namespace: default # ชื่อ Gateway ของคุณ
  hostnames:
  - "longhorn.achtix.com" # เปลี่ยนเป็น domain ที่ต้องการ
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
